render maps and markers

--- a/index.html
+++ b/index.html
@@ -28,17 +28,26 @@
     <div class="container">
       <header class="header">
         <nav class="nav">
-          <a href="#" class="btn logo nav-box">MANDOO</a>
+          <a href="/#" class="btn logo nav-box">MANDOO</a>
           <form action="" class="form">
-            <input type="text" class="search__field" autocomplete="off" />
+            <input type="text" class="form__input" autocomplete="off" />
             <button class="btn search__btn">Search</button>
           </form>
           <div class="bookmarks nav-box">
             Bookmarks
             <ul class="bookmarks__list">
-              <li class="bookmarks__list--name">Restaurant Name</li>
-              <li class="bookmarks__list--name">Restaurant Name</li>
-              <li class="bookmarks__list--name">Restaurant Name</li>
+              <li class="bookmarks__preview">
+                <p class="bookmarks__preview--name">Restaurant Name</p>
+                <p class="bookmarks__preview--address">Restaurant Address</p>
+              </li>
+              <li class="bookmarks__preview">
+                <p class="bookmarks__preview--name">Restaurant Name</p>
+                <p class="bookmarks__preview--address">Restaurant Address</p>
+              </li>
+              <li class="bookmarks__preview">
+                <p class="bookmarks__preview--name">Restaurant Name</p>
+                <p class="bookmarks__preview--address">Restaurant Address</p>
+              </li>
             </ul>
           </div>
         </nav>
