--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="content">
         <div class="results">
           <ul class="results-container">
-            <li class="preview">
+            <!-- <li class="preview">
               <div class="preview__marker">Marker</div>
               <div class="preview__info">
                 <div class="preview__info--name">Restaurant Name</div>
@@ -95,12 +95,12 @@
                 <div class="preview__info--name">Restaurant Name</div>
                 <div class="preview__info--address">Restaurant Address</div>
               </div>
-            </li>
+            </li> -->
           </ul>
           <div class="results-pagination">
-            <!-- <button class="btn results__btn results__btn--prev">PREV</button>
+            <button class="btn results__btn results__btn--prev">PREV</button>
             <div class="results__pages"></div>
-            <button class="btn results__btn results__btn--next">NEXT</button> -->
+            <button class="btn results__btn results__btn--next">NEXT</button>
           </div>
         </div>
         <div class="map-container">
